--- a/Demoshop/gradle.properties
+++ b/Demoshop/gradle.properties
@@ -20,5 +20,5 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 # Credentials for corvuspay SDK on GitHub
-corvusGitUser=h-corvuspay
+corvusGitUser=corvuspay
 corvusGitKey=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
