SDK update | added new parameters

--- a/Demoshop/gradle.properties
+++ b/Demoshop/gradle.properties
@@ -21,4 +21,4 @@ android.enableJetifier=true
 kotlin.code.style=official
 # Credentials for corvuspay SDK on GitHub
 corvusGitUser=h-corvuspay
-corvusGitKey=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
+corvusGitKey=
